# pyviterbi

./: .gitignore  Makefile  README.md
codegen/: CMakeLists.txt  buildInfo.mat  codeInfo.mat  codedescriptor.dmr  compileInfo.mat  rtw_proj.tmw  rtwtypes.h  viterbi_decode.c  viterbi_decode.h  viterbi_decode_emxAPI.c  viterbi_decode_emxutil.c  viterbi_decode_emxutil.h  viterbi_decode_initialize.c  viterbi_decode_terminate.c  viterbi_decode_types.h
codegen/examples/: main.c  main.h
codegen/html/: report.mldatx
codegen/interface/: _coder_viterbi_decode_api.c  _coder_viterbi_decode_api.h  _coder_viterbi_decode_info.c  _coder_viterbi_decode_info.h  _coder_viterbi_decode_mex.c  _coder_viterbi_decode_mex.h
include/: rtwtypes.h  viterbi.h  viterbi_decode_data.h  viterbi_decode_emxAPI.h  viterbi_decode_initialize.h  viterbi_decode_terminate.h
python/: viterbi.py
src/: example.c  test.c  viterbi.c
tests/: test.py
